--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.12",
+    "react-addons-perf": "^15.4.2",
     "react-native": "0.45.1",
     "react-native-baidu-map": "^0.6.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.0",
+    "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   },
@@ -20,7 +22,8 @@
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.0.0",
     "jest": "20.0.4",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "redux-immutable-state-invariant": "^2.0.0"
   },
   "jest": {
     "preset": "react-native"
